--- a/composites/casebox-core/pom.xml
+++ b/composites/casebox-core/pom.xml
@@ -24,16 +24,14 @@
 	<parent>
 		<groupId>se.inera.ifv</groupId>
 		<artifactId>casebox-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
-		<relativePath>..\..\</relativePath>
+		<version>1.1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 
-	<groupId>se.inera.ifv</groupId>
 	<artifactId>casebox-core</artifactId>
 	<name>casebox-composite-core</name>
 	<packaging>jar</packaging>
-	<version>1.1-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
