--- a/composites/casebox-web/pom.xml
+++ b/composites/casebox-web/pom.xml
@@ -24,15 +24,12 @@
 	<parent>
 		<groupId>se.inera.ifv</groupId>
 		<artifactId>casebox-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
-		<relativePath>..\..\</relativePath>
+		<version>1.1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-
-	<groupId>se.inera.ifv</groupId>
 	<artifactId>casebox-web</artifactId>
 	<name>casebox-composite-web</name>
-	<version>1.1-SNAPSHOT</version>
 
 	<build>
 		<resources>
