--- a/composites/casebox-ws-test-consumer/pom.xml
+++ b/composites/casebox-ws-test-consumer/pom.xml
@@ -26,13 +26,11 @@
 	<parent>
 		<groupId>se.inera.ifv</groupId>
 		<artifactId>casebox-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
-		<relativePath>..\..\</relativePath>
+		<version>1.1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<groupId>se.inera.ifv</groupId>
 	<artifactId>casebox-ws-test-consumer</artifactId>
-	<version>1.1-SNAPSHOT</version>
 	<name>casebox-ws-test-consumer</name>
 
 	<properties>
