--- a/composites/casebox-ws/pom.xml
+++ b/composites/casebox-ws/pom.xml
@@ -24,16 +24,14 @@
 	<parent>
 		<groupId>se.inera.ifv</groupId>
 		<artifactId>casebox-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
-		<relativePath>..\..\</relativePath>
+		<version>1.1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-
-	<groupId>se.inera.ifv</groupId>
 	<artifactId>casebox-ws</artifactId>
 	<packaging>jar</packaging>
 	<name>casebox-composite-ws</name>
-	<version>1.1-SNAPSHOT</version>
+
 
 	<build>
 		<plugins>
