--- a/modules/web/pom.xml
+++ b/modules/web/pom.xml
@@ -25,13 +25,11 @@
 	<parent>
 		<groupId>se.inera.ifv</groupId>
 		<artifactId>casebox-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
-		<relativePath>..\..\</relativePath>
+		<version>1.1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<groupId>se.inera.ifv</groupId>
 	<artifactId>casebox-app</artifactId>
-	<version>1.1-SNAPSHOT</version>
 	<name>casebox-module-web</name>
 	<packaging>war</packaging>
 
