ändringar i release plugin inställningar

--- a/pom.xml
+++ b/pom.xml
@@ -353,46 +353,16 @@
 				</configuration>
 				<version>3.3</version>
 			</plugin>
-<!-- 
-			<plugin>
-				<groupId>org.zeroturnaround</groupId>
-				<artifactId>jrebel-maven-plugin</artifactId>
-				<version>1.0.7</version>
 
-				<executions>
-					<execution>
-						<id>generate-rebel-xml</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
- -->
-			<plugin>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<configuration>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>true</downloadJavadocs>
-					<additionalConfig>
-						<file>
-							<name>.settings/org.eclipse.core.resources.prefs</name>
-							<content>
-<![CDATA[eclipse.preferences.version=1
-encoding/<project>=UTF-8]]>
-							</content>
-						</file>
-					</additionalConfig>
-				</configuration>
-				<version>2.10</version>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.1</version>
+				<version>2.5.1</version>
 				<configuration>
-					<tagBase>https://inera-casebox.googlecode.com/svn/tags/</tagBase>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<pushChanges>false</pushChanges>
+					<localCheckout>true</localCheckout>
 				</configuration>
 			</plugin>
 		</plugins>
