--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 
 	<scm>
 		<url>https://github.com/skltp-incubator/casebox.git</url>
-		<connection>scm:git:git://github.com/skltp-incubator/casebox.git</connection>
-		<developerConnection>scm:git:git://github.com/skltp-incubator/casebox.git</developerConnection>
+		<connection>scm:git:https://github.com:443/skltp-incubator/casebox.git</connection>
+		<developerConnection>scm:git:https://github.com:443/skltp-incubator/casebox.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
