--- a/modules/web/src/main/resources/log4j.properties
+++ b/modules/web/src/main/resources/log4j.properties
@@ -1,13 +1,22 @@
-log4j.rootLogger=INFO, R 
+log4j.rootLogger=INFO, R
 
-log4j.appender.R=org.apache.log4j.DailyRollingFileAppender 
-log4j.appender.R.File=${catalina.home}/logs/casebox.log 
+log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.R.File=${catalina.home}/logs/casebox.log
 log4j.appender.R.DatePattern='.'yyyy-MM-dd
-log4j.appender.R.layout=org.apache.log4j.PatternLayout 
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d{HH:mm:ss,SSS} %p [%t] %c - %m%n
 log4j.appender.R.encoding=UTF-8
 
+#Use this for debugging hql/sql
 log4j.logger.org.springframework=INFO
-log4j.logger.org.hibernate=INFO
+log4j.logger.org.hibernate=debug
 log4j.logger.org.apache.velocity=INFO
 log4j.logger.org.apache.cxf=INFO
+log4j.logger.org.hibernate.SQL=trace
+log4j.logger.org.hibernate.type.descriptor.sql=trace
+log4j.logger.org.hibernate.type=trace
+
+#log4j.logger.org.springframework=INFO
+#log4j.logger.org.hibernate=INFO
+#log4j.logger.org.apache.velocity=INFO
+#log4j.logger.org.apache.cxf=INFO
