--- a/modules/web/src/main/resources/default.properties
+++ b/modules/web/src/main/resources/default.properties
@@ -1,8 +1,8 @@
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/casebox
+#db.driver=com.mysql.jdbc.Driver
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://localhost:3307/casebox
 db.user=caseboxuser
 db.password=caseboxpassword
-
 jpa.database=MYSQL
-
 max.fetch.results=10
+
