--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,12 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cxf.version>2.3.0</cxf.version>
+		<cxf.version>3.1.0</cxf.version>
 		<commons-collection.version>3.2.2</commons-collection.version>
+		<spring-version>4.3.20.RELEASE</spring-version>
+		<spring-security-version>4.2.9.RELEASE</spring-security-version>
+		<junit-version>4.12</junit-version>
+		<hibernate-version>3.5.6-Final</hibernate-version>
 	</properties>
 
 	<scm>
@@ -88,7 +92,7 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
@@ -100,43 +104,50 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-beans</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-orm</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-tx</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-test</artifactId>
-				<version>3.0.4.RELEASE</version>
+				<version>${spring-version}</version>
 			</dependency>
-			<dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${spring-version}</version>
+      </dependency>
+
+      <dependency>
 				<groupId>org.springframework.webflow</groupId>
 				<artifactId>org.springframework.js</artifactId>
 				<version>2.0.5.RELEASE</version>
 			</dependency>
+
 
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
@@ -151,6 +162,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>se.vgregion.daoframework</groupId>
+				<artifactId>dao-framework</artifactId>
+				<version>3.2</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
 				<version>1.6.0</version>
@@ -159,7 +176,22 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
-				<version>3.4.0.GA</version>
+				<version>${hibernate-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-core</artifactId>
+				<version>${hibernate-version}</version>
+			</dependency>
+
+
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<!--version>${hibernate-version}</version-->
+				<version>4.2.0.Final</version>
 			</dependency>
 
 			<dependency>
@@ -177,7 +209,7 @@
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
-				<version>5.1.3</version>
+				<version>6.0.6</version>
 			</dependency>
 
 			<dependency>
@@ -198,7 +230,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.7</version>
+				<version>${junit-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.easymock</groupId>
@@ -296,17 +328,17 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-web</artifactId>
-				<version>3.0.3.RELEASE</version>
+				<version>${spring-security-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-config</artifactId>
-				<version>3.0.3.RELEASE</version>
+				<version>${spring-security-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
-				<version>3.0.3.RELEASE</version>
+				<version>${spring-security-version}</version>
 			</dependency>
 
 		</dependencies>
@@ -343,6 +375,9 @@
 					<source>1.7</source>
 					<target>1.7</target>
 					<encoding>UTF-8</encoding>
+					<compilerArgs>
+						<arg>-Xlint:deprecation</arg>
+					</compilerArgs>
 				</configuration>
 				<version>3.3</version>
 			</plugin>
