--- a/modules/web/pom.xml
+++ b/modules/web/pom.xml
@@ -34,7 +34,6 @@
 	<packaging>war</packaging>
 
 	<build>
-		<finalName>casebox</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -73,14 +72,13 @@
 					<dependency>
 						<groupId>mysql</groupId>
 						<artifactId>mysql-connector-java</artifactId>
-						<version>6.0.6</version>
+						<version>5.1.47</version>
 					</dependency>
 				</dependencies>
 
 				        <!-- common configuration shared by all executions -->
 				<configuration>
-					<!--driver>com.mysql.jdbc.Driver</driver-->
-					<driver>com.mysql.cj.jdbc.Driver</driver>
+					<driver>com.mysql.jdbc.Driver</driver>
 					<url>jdbc:mysql://localhost:3307/casebox</url>
 					<username>caseboxuser</username>
 					<password>caseboxpassword</password>
