--- a/composites/casebox-ws-test-consumer/pom.xml
+++ b/composites/casebox-ws-test-consumer/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>se.inera.ifv</groupId>
 		<artifactId>casebox-parent</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.1.1-RC1-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
