--- a/composites/casebox-web/pom.xml
+++ b/composites/casebox-web/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>se.inera.ifv</groupId>
         <artifactId>casebox-parent</artifactId>
-        <version>1.1.1-RC1</version>
+        <version>1.1.1-RC5-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
