--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<groupId>se.inera.ifv</groupId>
 	<artifactId>casebox-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.1.1-RC1</version>
+	<version>1.1.1-RC5-SNAPSHOT</version>
 	<name>casebox-parent</name>
 
 	<properties>
