--- a/composites/casebox-core/src/test/resources/log4j.properties
+++ b/composites/casebox-core/src/test/resources/log4j.properties
@@ -22,8 +22,7 @@
 log4j.rootLogger=DEBUG, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} %p [%t] %c - %m%n
+log4j.appender.stdout.layout=net.logstash.log4j.JSONEventLayoutV1
 
 log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
