--- a/modules/web/src/main/resources/log4j.properties
+++ b/modules/web/src/main/resources/log4j.properties
@@ -3,8 +3,7 @@ log4j.rootLogger=INFO, R
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender 
 log4j.appender.R.File=${catalina.home}/logs/casebox.log 
 log4j.appender.R.DatePattern='.'yyyy-MM-dd
-log4j.appender.R.layout=org.apache.log4j.PatternLayout 
-log4j.appender.R.layout.ConversionPattern=%d{HH:mm:ss,SSS} %p [%t] %c - %m%n
+log4j.appender.R.layout=net.logstash.log4j.JSONEventLayoutV1 
 log4j.appender.R.encoding=UTF-8
 
 log4j.logger.org.springframework=INFO
