--- a/pom.xml
+++ b/pom.xml
@@ -44,51 +44,31 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 
 		<cxf.version>3.4.1</cxf.version>
-		<!--		<cxf.version>3.1.0</cxf.version>-->
-
 		<commons-collection.version>3.2.2</commons-collection.version>
 
 		<spring-version>4.3.29.RELEASE</spring-version>
-		<!--		<spring-version>4.3.20.RELEASE</spring-version>-->
-
 		<spring-security-version>4.2.19.RELEASE</spring-security-version>
-		<!--		<spring-security-version>4.2.9.RELEASE</spring-security-version>-->
 
 		<hibernate.version>3.6.10.Final</hibernate.version>
-<!--				<hibernate.version>3.5.6-Final</hibernate.version>-->
-
-<!--		<hibernate-validator.version>6.1.6.Final</hibernate-validator.version>-->
-				<hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
-
+		<hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
 		<mysql-connector.version>8.0.22</mysql-connector.version>
-<!--				<mysql-connector.version>5.1.47</mysql-connector.version>-->
 
 		<spring-webflow-js.version>2.4.8.RELEASE</spring-webflow-js.version>
-<!--		<spring-webflow-js.version>2.0.5.RELEASE</spring-webflow-js.version>-->
-
 		<cglib.version>3.3.0</cglib.version>
-<!--		<cglib.version>2.2</cglib.version>-->
-
 		<apache-velocity.version>2.2</apache-velocity.version>
-<!--		<apache-velocity.version>1.6.4</apache-velocity.version>-->
-
 		<vgregion-daoframework.version>3.2</vgregion-daoframework.version>
 
 		<log4j.version>2.14.0</log4j.version>
-<!--		<slf4j.version>1.7.30</slf4j.version>-->
+		<log4j-layout-json.version>2.14.0</log4j-layout-json.version>
 
 		<!-- TEST DEPENDENCIES-->
 		<junit-version>4.13.1</junit-version>
 		<dbunit.version>2.7.0</dbunit.version>
 		<xmlunit.version>2.8.1</xmlunit.version>
 
-<!--		<easymock.version>4.2</easymock.version>-->
 		<easymock.version>3.0</easymock.version>
-
 		<hsqldb.version>1.8.0.7</hsqldb.version>
-<!--		<hsqldb.version>2.5.1</hsqldb.version>-->
 
-		<jackson.version>2.11.3</jackson.version>
 
 	</properties>
 
@@ -198,13 +178,6 @@
 				<version>${spring-webflow-js.version}</version>
 			</dependency>
 
-
-<!--			<dependency>-->
-<!--				<groupId>org.apache.velocity</groupId>-->
-<!--				<artifactId>velocity</artifactId>-->
-<!--				<version>1.6.4</version>-->
-<!--			</dependency>-->
-
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
 				<artifactId>velocity-engine-core</artifactId>
@@ -277,15 +250,19 @@
 				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-layout-template-json</artifactId>
+				<version>${log4j-layout-json.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.2</version>
 			</dependency>
 
 			<!-- Test dependencies-->
 			<dependency>
 				<groupId>hsqldb</groupId>
-<!--				<groupId>org.hsqldb</groupId>-->
 				<artifactId>hsqldb</artifactId>
 				<version>${hsqldb.version}</version>
 			</dependency>
@@ -371,16 +348,10 @@
 			</dependency>
 
 			<dependency>
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-				<version>1.2</version>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.5</version>
 			</dependency>
-
-<!--			<dependency>-->
-<!--				<groupId>commons-lang</groupId>-->
-<!--				<artifactId>commons-lang</artifactId>-->
-<!--				<version>2.5</version>-->
-<!--			</dependency>-->
 
 			<dependency>
 				<groupId>commons-io</groupId>
